Upgrade to JDK 21