@@ -13,8 +13,7 @@ dependencies {
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(17)
-        // vendor = JvmVendorSpec.
+        languageVersion = JavaLanguageVersion.of(21)
     }
 }
 
@@ -39,15 +38,3 @@ task copyToLib(type: Copy) {
 distTar.dependsOn(copyToLib)
 distZip.dependsOn(copyToLib)
 startScripts.dependsOn(copyToLib)
-
-// https://docs.gradle.org/current/userguide/building_java_projects.html#sec:feature_preview
-// This is specifically for JEP 406, "Enhanced Switch"
-tasks.withType(JavaCompile) {
-    options.compilerArgs += "--enable-preview"
-}
-tasks.withType(Test) {
-    jvmArgs += "--enable-preview"
-}
-tasks.withType(JavaExec) {
-    jvmArgs += "--enable-preview"
-}
